💄 #53 Corrected UI problem that covered some parts of the app.

--- a/src/assets/styles/forms.scss
+++ b/src/assets/styles/forms.scss
@@ -67,7 +67,7 @@
   }
 
   &.q-field--error .q-field__control::after {
-    background: currentColor;
+    // background: $errorPanelColor;
   }
 
   &.q-field--highlighted .q-field__label {
